fix: adjust responsiveness more on mobile

--- a/main.css
+++ b/main.css
@@ -6,23 +6,16 @@
   font-style: normal;
 }
 
-html {
+html, body {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100vh;
-}
-body {
-  display: flex;
-  flex-direction: column;
-  font-family: 'Nanum Gothic', sans-serif;
   margin: 0px;
+  font-family: 'Nanum Gothic', sans-serif;
 }
 #landing {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   min-width: 320px;
 }
 
@@ -46,7 +39,7 @@ body {
   overflow: hidden;
   width: 100%;
   height: 40px;
-  border: 1px solid #DDD;
+  border: 2px solid #DDD;
   border-radius: 5px;
   box-shadow: 0, 0, 5px, #DDD;
   margin: 0px;
@@ -58,7 +51,7 @@ body {
   align-items: center;
   height: 30px;
   font-size: 22px;
-  border-bottom: 1px dotted #DDD;
+  border-bottom: 1.5px dotted #DDD;
   padding: 5px;
 }
 
@@ -66,6 +59,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 50px;
   margin: 0vh 0vw 2vh;
 }
 #contact-btn {
@@ -76,12 +70,17 @@ body {
   height: 32px;
   font-size: 18px;
   cursor: pointer;
+  border: 4px solid black;
   border-radius: 3px;
   background-color: rgb(255, 255, 255);
 }
-#contact-btn .icon {
+#contact-btn .icon-open {
   width: 32px;
   height: 32px;
+}
+#contact-btn .icon-close {
+  width: 16px;
+  height: 16px;
 }
 #contact-btn:hover {
   background-color: #DDD;
@@ -89,8 +88,8 @@ body {
 #contact-nav {
   display: flex;
   justify-content: center;
+  align-items: center;
   width: 0px;
-  height: 100%;
   overflow-x: hidden;
   transition: 0.5s;
 }
@@ -99,7 +98,7 @@ body {
 }
 #contact-nav .icon {
   height: 32px;
-  margin: 2vw;
+  margin: 1.5vw;
 }
 
 #sub-bordered {
